@@ -754,7 +754,7 @@ b.conum * { color: inherit !important; }
 <div class="ulist">
 <ul>
 <li>
-<p>Date of release: 01/Jule/2017</p>
+<p>Date of release: 01/June/2017</p>
 </li>
 <li>
 <p>Type: Stable</p>
@@ -765,7 +765,9 @@ b.conum * { color: inherit !important; }
 </ul>
 </div>
 <div class="paragraph">
-<p>This is the release notes for version 3.1.79-11. The main goal for this version has been focused on the new licensing model, including IPS sensors, and a first approach to LDAP authentication. Multiple bugs and security bugs has been reported and fixed, prior the next release LTS.</p>
+<p>This is the release notes for version 3.1.79-11. The main goal for this version has been a new licensing model,
+including IPS sensors, and a first approach to LDAP authentication. Multiple bugs and security bugs has been
+reported and fixed, prior the next release LTS.</p>
 </div>
 <div class="sect2">
 <h3 id="_what_s_new">What&#8217;s new</h3>
